--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -76,7 +76,21 @@ jobs:
         with:
           workload_identity_provider: '${{ secrets.WIF_PROVIDER }}' # e.g. - projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
           service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}' # e.g. - my-service-account@my-project.iam.gserviceaccount.com
-
+     
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
+          
+      - name: Access Repository Secret
+        run: |
+          echo ${{ secrets.CLOUD_API_KEY }} > api_key.json
+        
+      - name: Install Dependencies
+        run: |
+          pip install segment-anything
+          pip install datetime
+          pip install shapely
       # NOTE: Alternative option - authentication via credentials json
       # - name: Google Auth
       #   id: auth
