--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -51,11 +51,10 @@ on:
     branches: [ "main" ]
 
 env:
-  PROJECT_ID: YOUR_PROJECT_ID # TODO: update Google Cloud project id
-  SERVICE: YOUR_SERVICE_NAME # TODO: update Cloud Run service name
-  REGION: YOUR_SERVICE_REGION # TODO: update Cloud Run service region
-  API_KEY: YOUR_API_KEY # TODO: update api key
-  REGISTER_KEY: YOUR_REGISTER_KEY # TODO: update register key 
+  PROJECT_ID: bold-guide-366619 # TODO: update Google Cloud project id
+  SERVICE: segmentanything-00001-cw2 # TODO: update Cloud Run service name
+  REGION: europe-west9 # TODO: update Cloud Run service region
+  RESTBAI_API_KEY: e311a67a878470f221c88835a02a58702f80773dd4d523e308822e94d01a39a0 # TODO: update api key # TODO: update register key 
 
 
 jobs:
