--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -89,7 +89,7 @@ jobs:
           pip install segment-anything
           pip install datetime
           pip install shapely
-          pip install pyTorch
+          pip install torch
 
       - name: Deploy to Cloud Run
         id: deploy
