--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -50,7 +50,7 @@ jobs:
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0
         with:
-          service: ${{ env.SERVICE }}
+          service: ${{ secrets.WIF_SERVICE_ACCOUNT }}
           region: ${{ env.REGION }}
           # NOTE: If required, update to the appropriate source folder
           source: ./
